fix black screen issue on mobile phone.

--- a/src/styles/plugin.scss
+++ b/src/styles/plugin.scss
@@ -69,5 +69,13 @@
     .vjs-loading-spinner{
       z-index: 10;
     }
+
+    &.vjs-panorama-moible-inline-video.vjs-seeking .vjs-loading-spinner{
+      display: none;
+    }
+
+    &.vjs-panorama-moible-inline-video.vjs-waiting .vjs-loading-spinner{
+      display: block!important;
+    }
   }
 }
